@@ -1,0 +1,199 @@
+package edu.sdsc.grid.io.irods;
+
+import static org.junit.Assert.*;
+
+import java.io.BufferedInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.FileInputStream;
+import java.util.Arrays;
+import java.util.Properties;
+
+import junit.framework.TestCase;
+
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.Ignore;
+import org.junit.Test;
+
+import edu.sdsc.jargon.testutils.AssertionHelper;
+import edu.sdsc.jargon.testutils.IRODSTestSetupUtilities;
+import edu.sdsc.jargon.testutils.TestingPropertiesHelper;
+import edu.sdsc.jargon.testutils.filemanip.FileGenerator;
+import edu.sdsc.jargon.testutils.filemanip.ScratchFileUtils;
+import edu.sdsc.jargon.testutils.icommandinvoke.IcommandInvoker;
+import edu.sdsc.jargon.testutils.icommandinvoke.IrodsInvocationContext;
+import edu.sdsc.jargon.testutils.icommandinvoke.icommands.IputCommand;
+
+public class IRODSRandomAccessFileTest {
+
+	private static Properties testingProperties = new Properties();
+	private static TestingPropertiesHelper testingPropertiesHelper = new TestingPropertiesHelper();
+	private static ScratchFileUtils scratchFileUtils = null;
+	public static final String IRODS_TEST_SUBDIR_PATH = "IrodsRandomAccessFileTest";
+	private static IRODSTestSetupUtilities irodsTestSetupUtilities = null;
+	private static AssertionHelper assertionHelper = null;
+
+	@BeforeClass
+	public static void setUpBeforeClass() throws Exception {
+		TestingPropertiesHelper testingPropertiesLoader = new TestingPropertiesHelper();
+		testingProperties = testingPropertiesLoader.getTestProperties();
+		scratchFileUtils = new ScratchFileUtils(testingProperties);
+		irodsTestSetupUtilities = new IRODSTestSetupUtilities();
+		irodsTestSetupUtilities.initializeIrodsScratchDirectory();
+		irodsTestSetupUtilities
+				.initializeDirectoryForTest(IRODS_TEST_SUBDIR_PATH);
+		assertionHelper = new AssertionHelper();
+	}
+
+	@AfterClass
+	public static void tearDownAfterClass() throws Exception {
+	}
+
+	@Before
+	public void setUp() throws Exception {
+	}
+
+	@After
+	public void tearDown() throws Exception {
+	}
+
+	@Test
+	public final void testRead() throws Exception {
+		// generate a local scratch file
+		String testFileName = "testfileseek.txt";
+		int fileLengthInKb = 2;
+		long fileLengthInBytes = fileLengthInKb * 1024;
+
+		String absPath = scratchFileUtils
+				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH);
+		String inputFileName = FileGenerator
+				.generateFileOfFixedLengthGivenName(absPath, testFileName,
+						fileLengthInBytes);
+
+		// put scratch file into irods in the right place
+		IrodsInvocationContext invocationContext = testingPropertiesHelper
+				.buildIRODSInvocationContextFromTestProperties(testingProperties);
+		IputCommand iputCommand = new IputCommand();
+
+		String targetIrodsCollection = testingPropertiesHelper
+				.buildIRODSCollectionAbsolutePathFromTestProperties(
+						testingProperties, IRODS_TEST_SUBDIR_PATH);
+
+		StringBuilder fileNameAndPath = new StringBuilder();
+		fileNameAndPath.append(absPath);
+
+		fileNameAndPath.append(testFileName);
+
+		iputCommand.setLocalFileName(fileNameAndPath.toString());
+		iputCommand.setIrodsFileName(targetIrodsCollection);
+		iputCommand.setForceOverride(true);
+
+		IcommandInvoker invoker = new IcommandInvoker(invocationContext);
+		invoker.invokeCommandAndGetResultAsString(iputCommand);
+
+		// read back the test file so I can compare
+
+		// here I'm saving the source file as a byte array as my 'expected'
+		// value for my test assertion
+		BufferedInputStream fis = new BufferedInputStream(new FileInputStream(
+				inputFileName));
+		byte[] inputBytes = new byte[1024];
+		fis.read(inputBytes);
+		fis.close();
+
+		// now try to do the seek
+
+		IRODSFileSystem irodsFileSystem = new IRODSFileSystem(
+				testingPropertiesHelper
+						.buildIRODSAccountFromTestProperties(testingProperties));
+		IRODSFile irodsFile = new IRODSFile(irodsFileSystem,
+				targetIrodsCollection + '/' + testFileName);
+		IRODSRandomAccessFile randomAccessFile = new IRODSRandomAccessFile(
+				irodsFile, "rw");
+
+		char readData = (char) randomAccessFile.read();
+		char expectedReadData = (char) inputBytes[0];
+
+		irodsFileSystem.close();
+		TestCase.assertEquals(
+				"byte I read does not match the first byte I wrote",
+				expectedReadData, readData);
+
+	}
+
+	@Ignore
+	public final void testReadBytes() {
+		fail("Not yet implemented");
+	}
+
+	@Ignore
+	public final void testWriteBytesByteArrayIntInt() {
+		fail("Not yet implemented");
+	}
+
+	@Test
+	public final void testSeekLongInt() throws Exception {
+		// generate a local scratch file
+		String testFileName = "testfileseek.txt";
+		int fileLengthInKb = 2;
+		long fileLengthInBytes = fileLengthInKb * 1024;
+
+		String absPath = scratchFileUtils
+				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH);
+		String inputFileName = FileGenerator
+				.generateFileOfFixedLengthGivenName(absPath, testFileName,
+						fileLengthInBytes);
+
+		// put scratch file into irods in the right place
+		IrodsInvocationContext invocationContext = testingPropertiesHelper
+				.buildIRODSInvocationContextFromTestProperties(testingProperties);
+		IputCommand iputCommand = new IputCommand();
+
+		String targetIrodsCollection = testingPropertiesHelper
+				.buildIRODSCollectionAbsolutePathFromTestProperties(
+						testingProperties, IRODS_TEST_SUBDIR_PATH);
+
+		StringBuilder fileNameAndPath = new StringBuilder();
+		fileNameAndPath.append(absPath);
+
+		fileNameAndPath.append(testFileName);
+
+		iputCommand.setLocalFileName(fileNameAndPath.toString());
+		iputCommand.setIrodsFileName(targetIrodsCollection);
+		iputCommand.setForceOverride(true);
+
+		IcommandInvoker invoker = new IcommandInvoker(invocationContext);
+		invoker.invokeCommandAndGetResultAsString(iputCommand);
+
+		// here I'm saving the source file as a byte array as my 'expected'
+		// value for my test assertion
+		BufferedInputStream fis = new BufferedInputStream(new FileInputStream(
+				inputFileName));
+		byte[] inputBytes = new byte[1024];
+		fis.read(inputBytes);
+		fis.close();
+
+		// now try to do the seek
+
+		IRODSFileSystem irodsFileSystem = new IRODSFileSystem(
+				testingPropertiesHelper
+						.buildIRODSAccountFromTestProperties(testingProperties));
+		IRODSFile irodsFile = new IRODSFile(irodsFileSystem,
+				targetIrodsCollection + '/' + testFileName);
+		IRODSRandomAccessFile randomAccessFile = new IRODSRandomAccessFile(
+				irodsFile, "rw");
+		randomAccessFile.seek(200L);
+		byte[] bytesToRead = new byte[20];
+		randomAccessFile.read(bytesToRead);
+		byte[] expectedBytes = new byte[20];
+		System.arraycopy(inputBytes, 200, expectedBytes, 0, 20);
+
+		irodsFileSystem.close();
+		
+		TestCase.assertTrue("did not seek and read the same data that I originally wrote", Arrays.equals(expectedBytes, bytesToRead));
+
+	}
+
+}
